resources/ej2-base/releasenotes/WindowsForms/Release-Notes/v17.1.0.32/GridGroupingControl.md
## GridGroupingControl
 
### Bug fixes
{:#gridgroupingcontrol-bug-fixes}

* \#F142118 – The `Excel Like Filter` in a ComboBox column now filters records properly with `DisplayMember` and `ValueMember`.
* \#225405 – The `SelectedRecordsChanging` event now triggers only once when the `ListBoxSelectionMode.One` is set and `Cancel` property of `SelectedRecordsChangedEventArgs` is set to true in the `SelectedRecordsChanging` event when selecting a particular record.
* \#221692 - Now, `NotSupportedException` throws with the valid message.
* \#225585 - `DynamicFilter` filters with `DBNull` value when a column has as set format.
* \#224203,#227254 - `Record.GetValue` returns the value from the underlying data source when `FilterMode` is set as `DisplayText`.
* \#225586 - `DynamicFilter` no longer shows duplicate values in the filter items list when a column has as set format.
* \#226986 - Filter works properly when `LessThanOrEqual` operator is used for `DateTimeColumn`.
